# starbuck-analysis-project

./: .gitignore  README.md  app.py  main.py  pyproject.toml
notebooks/: 01_eda_and_storytelling.ipynb
reports/: causal_report.json  clustering_report.json  data_quality_report.json  eda_summary.json  executive_summary.md  feature_summary.json  modeling_report.json  shap_report.json  technical_appendix.md
src/data/: eda.py  feature_engineering.py  load_data.py
src/models/: clustering.py  predictive_modeling.py  recommendation.py  shap_analysis.py
src/reporting/: export_powerbi.py  generate_report.py
src/visualization/: gen_viz.py  run_improved_viz.py
tests/: conftest.py  test_clustering.py  test_feature_engineering.py  test_load_data.py
